# python_cloud_project_template

./: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: docker_on_push.yml  docker_workflow.yml  main.yml  test_build_push.yml
src/fastapi_dev/: main.py
tests/: test_main.py
